<?xml version="1.0" encoding="utf-8"?>
<!-- Specifies the xml for the activity to make new tasks -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NewTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTask">
    <!-- SMS icon to let user send task to others -->
    <!-- Heading -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_99sdp"
        android:text="@string/title_newtask"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Label for task name -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="@dimen/_48sdp"
        android:text="@string/task_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload" />
    <!-- Field to enter task name -->
    <EditText
        android:id="@+id/taskName"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_49sdp"
        android:layout_marginStart="48dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/edit_appearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
    <!-- Label for task description -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="@dimen/_48sdp"
        android:text="@string/task_descrip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />
    <!-- Field to enter task description -->
    <EditText
        android:id="@+id/taskDesc"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="48dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="@string/task_desc_lim"
        android:inputType="textPersonName"
        android:textColor="@color/edit_appearance"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
    <!-- Button to create the task -->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:background="@drawable/glass_button"
        android:text="@string/task_make"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- ProgressBar to assure users the app is working correctly -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:translationZ="75dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Allows a user to upload an image alogside the task -->
    <ImageButton
        android:id="@+id/upload"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/taskview"
        android:scaleType="fitXY"
        android:src="@drawable/upload_me"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>