<?xml version="1.0" encoding="utf-8"?>
<!-- Specifies the xml for the activity to register a new user -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <!-- Button to Register A new User -->
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reg_tut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/Button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:background="@drawable/glass_button"
        android:text="@string/title_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConPass" />
    <!-- Password label -->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="48dp"
        android:text="@string/reg_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />
    <!-- Username label -->
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="48dp"
        android:text="@string/reg_name"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />
    <!-- Field to enter confirmation of password -->
    <EditText
        android:id="@+id/ConPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/edit_appearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
    <!-- Password confirmation label -->
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="48dp"
        android:text="@string/reg_con_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />
    <!-- Heading -->
    <TextView
        android:id="@+id/textView14"
        android:layout_width="273dp"
        android:layout_height="71dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Field to enter username -->
    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:hint="@string/reg_name"
        android:inputType="textPersonName"
        android:textColor="@color/edit_appearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
    <!-- Field to enter password -->
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/edit_appearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />
    <!-- Label for email -->
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
    <!-- Field to enter email -->
    <EditText
        android:id="@+id/Email"
        android:layout_width="288dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/edit_appearance"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
    <!-- ProgressBar to assure users the app is working correctly -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>